--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -62,7 +62,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Hi, I'm Swakhil</h1>
-      <p class="lead text-muted">I love to develop websites. It makes me feel very different from others. I can build what i want to.</p>
+      <p class="lead text-muted">Hello, I love to develop websites. It makes me feel very different from others. I can build what i want to.</p>
       <p>
         <a href="mailto:mattapalliswakhil@gmail.com" class="btn btn-primary my-2">Email me</a>
       </p>
